# rampy

./: README.md  pyproject.toml
src/rampy/: __init__.py  main.py  raman_plotter.py  rammove.py
src/rampy/ntool/: RMP00146.jdx  __init__.py  baseline.py  derivative.py  detect_peaks.py  dtypetools.py  interpolation_test.py  smooth.py  stitch_tiles.py
src/rampy/spectrum/: brukerspx.py  jdx.py  peaklines.py  periodictable.py  spectrum.py  spectrum_browser.py  spectrumio.py  spx_to_xlsx.py  square_root_scale.py
src/rampy/spectrum/data/: peak_colors.tsv  peak_lines.tsv  peak_lines_all.tsv  peak_lines_copy_by_energy.tsv  peak_lines_main.tsv
src/rampy/spectrum/spekpy/: thresholds.py  xraytubespectrum.py  xraytubespectrumcumulative.py
src/rampy/spectrum/test/: 10.spx  11.spx  15.spx  180427-7_manila_kopal.jdx  Az-Che_017.spx  Crocoite__R050044-3__Raman__514__0__depolarized__Raman_Data_Processed__4672.jdx  ZnO2.jdx
src/rampy/spectrum/tools/: BaselineRemoval.py
src/rampy/spectrum/xray/: xray_lines.xlsx  xraydb_demo.py
src/rampy/spectrum/zzz/: spectrum (super).py  spectrum2024.py  spectrum_browser_eds.py  spectrum_browser_mpl.py  spectrum_eds.py  spectrum_old.py  spectrum_parser_old.py
