[project]
name = "rampy"
version = "0.1.0"
description = "Raman/XRF processing tools"
readme = "README.md"
authors = [
    { name = "ffsedd", email = "ffsedd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jcamp>=1.2.2",
    "matplotlib>=3",
    "numpy>=2",
    "pandas",
    "scipy>=1.15.3",
    "xmltodict>=1.0.4",
    "zuy",
]

# CLI entry point
[project.scripts]
rampy = "rampy.main:main"
rammove = "rampy.rammove:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
# Package name (not path)
packages = ["rampy"]

# Tell uv that your source is under 'src/'
src-layout = "src"

[tool.uv.sources]
zuy = { path = "../zuy" }
